cache bust and make sure long skinny entry images don't get boxed with too much height

--- a/wp-content/themes/makerfaire/scss/entry.scss
+++ b/wp-content/themes/makerfaire/scss/entry.scss
@@ -114,7 +114,6 @@
 			}
 			&.project-image-wide { // for those long, logo images
 				aspect-ratio: auto;
-				height: 100%;
 				img{
 					object-fit: contain;
 					object-position: center;
